objects/ssot__SavedApplicationReference__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicantId__c</fullName>
        <label>Applicant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationCategory__c</fullName>
        <label>Application Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationNameText__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationType__c</fullName>
        <label>Application Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessAccountNameId__c</fullName>
        <label>Business Account Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Saved Application Reference Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramTermApplnTimelineId__c</fullName>
        <label>Program Term Application Timeline</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SavedApplicationUrl__c</fullName>
        <label>Saved Application URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmissionDate__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SubmittedByContactId__c</fullName>
        <label>Submitted By Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817702779_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SavedApplicationReference_BusinessAc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>SavedApplicationReference_BusinessAc_rel</relationshipLabel>
        <relationshipName>rel_1719817702779_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819538018_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SavedApplicationReference_ProgramTer_rel</label>
        <referenceTo>ssot__ProgramTermApplicationTimeline__dlm</referenceTo>
        <relationshipLabel>SavedApplicationReference_ProgramTer_rel</relationshipLabel>
        <relationshipName>rel_1719819538018_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291143279_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SavedApplicationReference_ApplicantI_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>SavedApplicationReference_ApplicantI_rel</relationshipLabel>
        <relationshipName>rel_1720291143279_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>